--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
+           <li class="nav-item">
+              <a class="nav-link" href="https://lindaangellina.github.io/index2">Portofolio 2</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -201,6 +204,12 @@
     </section>
     <!-- Akhir Contact -->
 
+
+
+
+
+
+
     <!-- Footer -->
     <footer class="bg-primary text-white text-center pb-5">
       <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/lindaangel505/" class="text-white fw-bold">Linda Angellina</a></p>
@@ -252,7 +261,7 @@
     </script>
 
     <script>
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbzjWwvjJihKz3-24SxEnHM5XFjNPgQd_dv3uD_fgjLSp_4AAXsC6IC4C_ECvWyLkGsuBg/exec';
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbzw7z3zCy2GUtwD4w0weaDZVjxobHvelv1WsZfbkjDN6vdvRO0EYBKsY8D6DVgFRkCu/exec';
       const form = document.forms['wpu-contact-form'];
       const btnKirim = document.querySelector('.btn-kirim');
       const btnLoading = document.querySelector('.btn-loading');
