--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <div class="header">
       <div class="photo">
-        <img src="img/lindapdh.jpg" alt="Foto Profil" />
+        <img src="img/linda1.jpg" alt="Foto Profil" />
       </div>
       <div class="name">
         <h1>Linda<br> Angellina</h1>
