--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
            <li class="nav-item">
               <a class="nav-link" href="https://lindaangellina.github.io/index2">Portofolio 2</a>
             </li>
+           <li class="nav-item">
+              <a class="nav-link" href="batik/">Batik</a>
+            </li>
           </ul>
         </div>
       </div>
