--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
            <li class="nav-item">
               <a class="nav-link" href="batik/">Batik</a>
             </li>
+             <li class="nav-item">
+              <a class="nav-link" href="webkaggle/">Web Kanggle</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -301,3 +304,4 @@
     </script>
   </body>
 </html>
+
