--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <a class="nav-link" href="batik/">Batik</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link" href="webkaggle/">Web Kanggle</a>
+              <a class="nav-link" href="webkaggle/">Web Kaggle</a>
             </li>
           </ul>
         </div>
@@ -304,4 +304,5 @@
     </script>
   </body>
 </html>
+
 
