--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
               <a class="nav-link" href="#contact">Contact</a>
             </li>
            <li class="nav-item">
-<<<<<<< HEAD
               <a class="nav-link" href="https://lindaangellina.github.io/index2">Portofolio 2</a>
-=======
-              <a class="nav-link" href="index2.html">Portofolio 2</a>
->>>>>>> 4b00493626747dbaf0ebab0ec1d0f9851fc583bb
+            </li>
+           <li class="nav-item">
+              <a class="nav-link" href="batik/">Batik</a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link" href="webkaggle/">Kaggle</a>
             </li>
           </ul>
         </div>
@@ -302,3 +304,6 @@
     </script>
   </body>
 </html>
+
+
+
