--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
             </li>
            <li class="nav-item">
               <a class="nav-link" href="https://lindaangellina.github.io/index2">Portofolio 2</a>
+              <!-- <a class="nav-link" href="index2.html">Portofolio 2</a> -->
             </li>
-           <li class="nav-item">
-              <a class="nav-link" href="batik/">Batik</a>
           </ul>
         </div>
       </div>
@@ -117,41 +116,41 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3" data-aos="flip-right">
             <div class="card">
-              <img src="img/project1.jpg" class="card-img-top" alt="Project 1" />
+              <img src="img/pj1.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text">Wedding Moments : Abadikan momen sakral penuh cinta dengan nuansa natural dan hangat. Proyek ini menampilkan foto-foto candid dan emosional dari pernikahan outdoor dengan sentuhan warna pastel.</p>
+                <p class="card-text">EduManage adalah website manajemen sekolah terpadu yang saya kembangkan untuk membantu sekolah dalam mengelola data siswa, guru, nilai, serta administrasi sekolah secara terpusat. Website ini dirancang agar proses pengelolaan menjadi lebih praktis, efisien, dan terorganisir dengan baik melalui tampilan yang sederhana dan mudah digunakan.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="500">
             <div class="card">
-              <img src="img/project2.jpeg" class="card-img-top" alt="Project 2" />
+              <img src="img/pj2.jpg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
-                <p class="card-text">Portrait Session : Sesi pemotretan personal dengan cahaya alami, menampilkan karakter dan ekspresi klien secara mendalam. Cocok untuk kebutuhan personal branding, profil profesional, atau sosial media.</p>
+                <p class="card-text">Game Platformer Horror adalah game 2D yang saya buat menggunakan Construct 3 dengan nuansa gelap dan menyeramkan. Game ini mengusung konsep petualangan platformer, di mana pemain harus menghindari rintangan dan musuh untuk menyelesaikan level. Proyek ini dibuat untuk melatih logika game, pengaturan event sheet, serta desain level dan karakter.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="1000">
             <div class="card">
-              <img src="img/project3.jpeg" class="card-img-top" alt="Project 3" />
+              <img src="img/pj3.jpg" class="card-img-top" alt="Project 3" />
               <div class="card-body">
-                <p class="card-text">Nature Escape : Menangkap keindahan alam seperti pegunungan berkabut, danau tenang, dan pepohonan musim gugur. Proyek ini fokus pada suasana damai dan komposisi alam yang dramatis.</p>
+                <p class="card-text">Sistem Informasi Data Barang adalah aplikasi web berbasis admin dashboard yang saya kembangkan untuk mengelola data barang secara terstruktur. Sistem ini memiliki fitur tambah, edit, hapus, pencarian, dan pengelolaan stok barang, serta dilengkapi dengan tampilan dashboard yang rapi dan responsif menggunakan template AdminLTE. Proyek ini dibuat untuk melatih kemampuan backend dan frontend dalam pengembangan aplikasi web.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="500">
             <div class="card">
-              <img src="img/project4.jpg" class="card-img-top" alt="Project 4" />
+              <img src="img/pj4.jpg" class="card-img-top" alt="Project 4" />
               <div class="card-body">
-                <p class="card-text">Street Vibes : Foto dokumenter kehidupan kota – mulai dari pedagang kaki lima hingga kehidupan malam di jalanan Jakarta. Menyajikan suasana spontan, nyata, dan penuh cerita.</p>
+                <p class="card-text">Website Topeng Nusantara adalah website edukasi yang saya buat untuk memperkenalkan berbagai jenis topeng tradisional dari berbagai daerah di Indonesia. Website ini menampilkan informasi sejarah, karakteristik, dan kegunaan topeng dengan tampilan visual yang menarik dan terstruktur. Proyek ini bertujuan untuk melestarikan budaya Nusantara sekaligus melatih kemampuan saya dalam desain UI dan pengembangan website.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3" data-aos="flip-right" data-aos-delay="1000">
             <div class="card">
-              <img src="img/project5.webp" class="card-img-top" alt="Project 5" />
+              <img src="img/pj5.jpg" class="card-img-top" alt="Project 5" />
               <div class="card-body">
-                <p class="card-text">Product Showcase : Pemotretan produk untuk brand lokal, dengan pencahayaan studio dan latar minimalis. Cocok untuk katalog, e-commerce, atau iklan digital.</p>
+                <p class="card-text">Website Batik Nusantara adalah website informatif yang saya rancang dan kembangkan untuk memperkenalkan batik Indonesia sebagai warisan budaya dunia. Website ini menampilkan halaman beranda, sejarah, galeri, dan informasi batik dengan tampilan visual modern, responsif, dan user-friendly. Proyek ini dibuat untuk melatih kemampuan desain UI serta pengembangan website menggunakan HTML, CSS, dan JavaScript.</p>
               </div>
             </div>
           </div>
@@ -300,7 +299,3 @@
     </script>
   </body>
 </html>
-
-
-
-
