--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
               <a class="nav-link" href="https://lindaangellina.github.io/index2">Portofolio 2</a>
               <!-- <a class="nav-link" href="index2.html">Portofolio 2</a> -->
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#batik">Batik</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -299,4 +302,5 @@
     </script>
   </body>
 </html>
+
 
