--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4" data-aos="fade-right">
-            <p>Halo! Perkenalkan, nama saya Linda Angellina, siswi dari SMKN 5 Malang, saat ini saya berada di kelas XI PPLG 2 (Pengembangan Perangkat Lunak dan Gim). Di tengah kesibukan belajar teknologi dan pemrograman, saya menemukan dunia lain yang membuat saya jatuh cinta—fotografi. Sejak kecil, saya sudah tertarik dengan hal-hal visual. Awalnya hanya suka memotret benda di sekitar rumah menggunakan kamera HP. Namun, lama kelamaan saya mulai menyadari bahwa setiap gambar memiliki cerita. Dari situlah saya mulai belajar lebih dalam tentang teknik mengambil gambar, pencahayaan, komposisi, hingga editing sederhana. Kini, saya sering mengabadikan momen-momen di sekitar saya—baik itu pemandangan, potret teman, maupun kegiatan sekolah.</p>
+            <p>Halo! Perkenalkan, nama saya Linda Angellina, siswi kelas XI jurusan PPLG (Pengembangan Perangkat Lunak dan Gim) di SMKN 5 Malang. Saya memiliki minat dalam dunia teknologi, khususnya pengembangan website, aplikasi, dan game. Di luar kegiatan belajar, saya memiliki hobi membaca novel dan berenang, yang membantu saya menjaga keseimbangan antara kreativitas dan fokus.</p>
           </div>
           <div class="col-md-4" data-aos="fade-left">
-            <p>Bagi saya, fotografi bukan hanya sekadar hobi, melainkan cara untuk mengekspresikan sudut pandang dan perasaan yang sulit diungkapkan dengan kata-kata. Saya percaya bahwa satu foto yang tepat bisa berbicara lebih banyak daripada paragraf panjang. Selain fotografi, saya juga memiliki minat besar dalam dunia literasi. Saya gemar membaca novel, terutama genre romansa, fiksi remaja, dan fantasi. Kegiatan membaca sangat membantu saya memperluas imajinasi dan memperkaya cara pandang saya dalam mengambil gambar—karena membaca mengajarkan saya melihat sesuatu dari banyak sisi.</p>
+            <p>Selama berada di kelas XI SMKN 5 Malang, saya telah mengerjakan berbagai proyek web dan game sebagai bagian dari proses pembelajaran. Proyek-proyek tersebut meliputi website informatif, sistem informasi berbasis web, serta game 2D, yang melatih kemampuan saya dalam desain UI, frontend, backend, dan pemahaman pengembangan perangkat lunak secara menyeluruh.</p>
           </div>
         </div>
       </div>
@@ -302,6 +302,7 @@
     </script>
   </body>
 </html>
+
 
 
 
